# senior-exam-writer

./: .gitignore  SKILL.md  llms.txt  pyproject.toml
agents/: openai.yaml
docs/acceptance/: README.md  senior_exam_writer_actual_question_package.docx  senior_exam_writer_actual_question_package.json  senior_exam_writer_artifact_verification.json  senior_exam_writer_artifact_verification.md
references/: acceptance_checklist.md  audit_workflow.md  current_affairs.md  evidence_gate.md  llama_cpp.md  llamaindex_mcp.md  module_boundaries.md  question_rules.md  sqlite_schema.md  style_difficulty.md  task_workflow.md
scripts/: export_provider_env.py  init_local_runtime.py  init_modelscope_runtime.py  llamaindex_rag.py  llamaindex_sqlite_vec_rag.py  run_batch.py  senior_exam_writer.py
scripts/senior_exam_writer_lib/: __init__.py  cli.py  collection.py  common.py  dedup.py  evidence_planning.py  evidence_roles.py  generation.py  historical_review.py  ingest.py  llama_cpp_client.py  local_embedding_runtime.py  parsing.py  planning.py  prepare_pipeline.py  requirement_prompts.py  retrieval.py  runtime.py  source_archive.py  source_metadata.py  store.py  tasks.py  (+1 more)
tests/: conftest.py  test_calculation_contract.py  test_candidate_generation.py  test_collection_cache.py  test_docs_closed_loop.py  test_historical_review.py  test_llamaindex_sqlite_vec_rag.py  test_planning.py  test_prepare_pipeline.py  test_provider_env.py  test_requirement_prompts.py  test_retrieval.py  test_review_gate.py  test_run_batch.py  test_runtime.py  test_source_archive.py  test_store_schema.py
