[project]
name = "senior-exam-writer-skill"
version = "0.1.0"
description = "Local evidence-gated Chinese exam-question workflow for Codex skills."
requires-python = ">=3.10"
dependencies = [
  "modelscope>=1.20.0",
  "tomli>=2.0.1; python_version < '3.11'",
  "pypdf>=5.0.0",
  "python-docx>=1.1.2",
]

[project.optional-dependencies]
test = [
  "pytest>=8.0.0",
]
pdf-fixtures = [
  "reportlab>=4.0.0",
]
rag = [
  "llama-index-core>=0.12.0",
  "llama-index-readers-file>=0.4.0",
  "llama-index-embeddings-openai-like>=0.3.0",
  "sqlite-vec>=0.1.0",
]

[[tool.uv.index]]
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
default = true

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["scripts"]
addopts = "-q"
